更新了错误链接地址

--- a/index.html
+++ b/index.html
@@ -237,38 +237,42 @@
             <section class="card full-width">
                 <h2>比赛规则与平台</h2>
                 <ul>
-                    <li><strong>规则见：</strong> <a href="https://blog.csdn.net/zhuoqingjokin/article/details/135934572" target="_blank">第十九届全国大学生智能汽车竞速比赛规则（讨论稿）-CSDN博客</a></li>
-                    <li><strong>完全模型细则：</strong> <a href="https://blog.csdn.net/zhuoqingjokin/article/details/136004990" target="_blank">第十九届全国大学生智能汽车竞赛-竞速比赛模型组比赛细则-CSDN博客</a></li>
-                    <li><strong>车模平台：</strong> <a href="https://blog.csdn.net/zhuoqingjokin/article/details/136040334" target="_blank">第十九届全国大学生智能汽车竞赛车模信息-CSDN博客</a></li>
-                </ul>
+                    <li><strong>全国智能汽车大赛规则详细见：</strong> <a href="https://blog.csdn.net/zhuoqingjoking97298/article/details/143673441" target="_blank">第二十届全国大学生智能汽车竞速比赛规则</a></li>
+                    <li><strong>完全模型细则：</strong> <a href="https://blog.csdn.net/zhuoqingjoking97298/article/details/134667660" target="_blank">第十九届全国大学生智能汽车竞赛-竞速比赛模型组比赛细则（该赛事有取消可能）</a></li>
+                   
             </section>
 
             <section class="card full-width">
                 <h2>教程区</h2>
                 <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 1rem;">
-                    <a href="https://www.bilibili.com/video/BV1U5411L74A/" target="_blank" class="card" style="height: auto; margin: 0;">
+                    <a href="https://www.bilibili.com/video/BV1eg4y1v7Xd?p=2&vd_source=8b3cee725b04a82a3634381ab0574f8b" target="_blank" class="card" style="height: auto; margin: 0;">
                         <h3 style="margin-top: 0;">看36个电路图上</h3>
                         <p>哔哩哔哩视频教程</p>
                     </a>
-                    <a href="https://www.bilibili.com/video/BV1z4411B721/" target="_blank" class="card" style="height: auto; margin: 0;">
-                        <h3 style="margin-top: 0;">立创EDA最新教学视频</h3>
+                    <a href="https://www.kdocs.cn/l/ct8Pnbv9P8N9?linkname=V2tgXt7d7S" target="_blank" class="card" style="height: auto; margin: 0;">
+                        <h3 style="margin-top: 0;">立创EDA快速入门教学视频</h3>
                         <p>立创课堂</p>
                     </a>
-                    <a href="https://www.bilibili.com/video/BV1hA411g7k8/" target="_blank" class="card" style="height: auto; margin: 0;">
-                        <h3 style="margin-top: 0;">立创EDA快速入门</h3>
-                        <p>电路设计与制作</p>
-                    </a>
-                    <a href="https://www.bilibili.com/video/BV1Ds411a7Zo/" target="_blank" class="card" style="height: auto; margin: 0;">
+                   
+                    <a href="https://www.bilibili.com/video/BV1mY411y76c/?spm_id_from=333.337.search-card.all.click" target="_blank" class="card" style="height: auto; margin: 0;">
                         <h3 style="margin-top: 0;">AuTop算法改进思路</h3>
                         <p>NUIST SCC第一次算法培训</p>
                     </a>
-                    <a href="https://www.bilibili.com/video/BV1sW41167b2/" target="_blank" class="card" style="height: auto; margin: 0;">
+                    <a href="https://www.bilibili.com/video/BV1eL411L7NR/?share_source=copy_web&vd_source=794c781902c3c40f0f46ab7c8ed131a1" target="_blank" class="card" style="height: auto; margin: 0;">
                         <h3 style="margin-top: 0;">摄像头数字图像处理算法</h3>
                         <p>智能车制作加餐</p>
                     </a>
-                    <a href="https://aistudio.baidu.com/projectdetail/662587" target="_blank" class="card" style="height: auto; margin: 0;">
+                    <a href="https://aistudio.baidu.com/course/introduce/25302" target="_blank" class="card" style="height: auto; margin: 0;">
                         <h3 style="margin-top: 0;">零基础实践深度学习</h3>
                         <p>飞桨AI Studio星河社区</p>
+                    </a>
+                    <a href="https://www.bilibili.com/video/BV1gr4y1Q7j5/?spm_id_from=333.337.search-card.all.click" target="_blank" class="card" style="height: auto; margin: 0;">
+                        <h3 style="margin-top: 0;">摄像头数字图像处理算法</h3>
+                        <p>ROS加餐</p>
+                    </a>
+                    <a href="https://www.bilibili.com/video/BV1gr4y1Q7j5/?spm_id_from=333.337.search-card.all.click" target="_blank" class="card" style="height: auto; margin: 0;">
+                        <h3 style="margin-top: 0;">摄像头数字图像处理算法</h3>
+                        <p>ROS加餐</p>
                     </a>
                 </div>
             </section>
@@ -343,7 +347,7 @@
                     <li>全流程跑通YOLO，部署到电脑实时运行，完成红蓝锥桶检测。（数据集可在AI Studio平台下载）</li>
                     <li>提交AI Studio平台的线上赛测评。</li>
                 </ul>
-                <p><strong>锥桶数据集：</strong> <a href="https://aistudio.baidu.com/datasetdetail/111221" target="_blank">飞桨AI Studio数据集</a></p>
+                <p><strong>锥桶数据集：</strong> <a href="https://aistudio.baidu.com/datasetdetail/120244" target="_blank">飞桨AI Studio数据集</a></p>
             </section>
 
             <section class="card full-width">
