修复【立创EDA（专业版）电路设计与制作快速入门】 跳转到文档
【立创EDA（专业版）电路设计与制作快速入门】 https://www.bilibili.com/video/BV1sv4y1T7UB/?share_source=copy_web&vd_source=794c781902c3c40f0f46ab7c8ed131a1

--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
                         <h3 style="margin-top: 0;">用立创EDA画电路图和PCB教程</h3>
                         <p>哔哩哔哩视频教程</p>
                     </a>
-                    <a href="https://www.kdocs.cn/l/ct8Pnbv9P8N9?linkname=V2tgXt7d7S" target="_blank" class="card" style="height: auto; margin: 0;">
-                        <h3 style="margin-top: 0;">立创EDA快速入门教学视频</h3>
-                        <p>立创课堂</p>
+                    <a href="https://www.bilibili.com/video/BV1sv4y1T7UB/?share_source=copy_web&vd_source=794c781902c3c40f0f46ab7c8ed131a1" target="_blank" class="card" style="height: auto; margin: 0;">
+                        <h3 style="margin-top: 0;">立创EDA（专业版）电路设计与制作快速入门 </h3>
+                        <p>哔哩哔哩视频教程</p>
                     </a>
                     <a href="https://www.bilibili.com/video/BV1f54112719/?share_source=copy_web&vd_source=f970661e8a891c441cbb49f75a0134ba" target="_blank" class="card" style="height: auto; margin: 0;">
                         <h3 style="margin-top: 0;">智能车基础硬件入门</h3>
